@@ -1040,6 +1040,18 @@
                         <onclick condition="Skin.String(SplashScreen)">Skin.Reset(SplashScreen)</onclick>
                     </control>
                     
+                    <!-- Auto update artwork downloader -->
+                    <control type="radiobutton" id="8913">
+                        <radioposx>1350</radioposx>
+                        <width>100%</width>
+                        <label>31747</label>
+                        <onclick>Skin.ToggleSetting(UpdateArt.Enabled)</onclick>
+                        <selected>Skin.HasSetting(UpdateArt.Enabled)</selected>
+                        <include>Defs_OptionButton</include>
+                        <visible>ControlGroup(8000).HasFocus(8009)</visible>
+                        <visible></visible>
+                    </control>
+                    
                     <!-- Activate Password -->
                     <control type="radiobutton" id="8911">
                         <radioposx>1350</radioposx>
@@ -1393,7 +1405,7 @@
 			<selected>System.HasAddon(plugin.video.youtube)</selected>
 			<include>Defs_OptionButton</include>
 			<visible>ControlGroup(8000).HasFocus(8098)</visible>
-		    </control>                  
+		    </control>              
                     
                 </control>
             </control>
